fix z-index of intro box

--- a/css/components/app/pages/splash_detail.scss
+++ b/css/components/app/pages/splash_detail.scss
@@ -10,7 +10,7 @@
     max-width: 300px;
     max-height: 300px;
     background-color: $white;
-    z-index: 9999999;
+    z-index: 999;
 
     &.-closed {
       left: 0px;
